# dl_showcase

./: .coverage  .env  .gitignore  README.md  pyproject.toml
app/: main.py
app/config/: settings.py
dl_models/dl_house_objects/: README.md  detect_object.py  main.py
dl_models/dl_house_objects/dl_model/df_unified/: data.yaml
dl_models/dl_house_objects/dl_training/: start_train_mlflow.sh  train_compare_yolos.py
tests/: test_app.py
